# scrapyard

./: Dockerfile  LICENSE  README.md  example.docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2023-05-31-184002_create_users/: up.sql
backend/migrations/2023-05-31-184234_create_pastes/: up.sql
backend/src/: auth.rs  config.rs  database.rs  error.rs  filemanager.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
backend/src/database/: pastes.rs  users.rs
backend/src/models/: paste.rs  user.rs
backend/src/routes/: pastes.rs  profiles.rs  users.rs
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/api/: fetch.js  index.js
frontend/components/: code-editor.vue  code-viewer.vue  paste-card.vue
frontend/components/dialog/: change-avatar.vue  confirmation.vue  log-in.vue  log-out.vue  save-file.vue  save-text.vue
frontend/components/floating/: menu.vue  save.vue
frontend/composables/: apiFetch.js  blobToImage.js
frontend/pages/: 404.vue  index.vue
frontend/pages/f/: [id].vue
frontend/pages/p/: [id].vue
frontend/pages/u/: [id].vue
frontend/plugins/: codemirror.ts  vuetify.ts
frontend/stores/: pastes.js  user.js
