[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.25", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
rocket_cors = { version = "0.6.0-alpha2", default-features = false }
rocket_sync_db_pools = { version = "0.1.0-rc.3", default-features = false, features = ["diesel_postgres_pool"] }
rust-s3 = "0.33.0"
scrypt = "0.11.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
validator = "0.16.0"
validator_derive = "0.16.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
